--- a/src/Secrets.h.example
+++ b/src/Secrets.h.example
@@ -1,6 +1,3 @@
-// Secrets.h - WiFi credentials for OTA updates
-// Copy this file to Secrets.h and fill in your actual credentials
-// NEVER commit Secrets.h to version control
-
-const char* ssid = "YOUR_WIFI_SSID";
-const char* password = "YOUR_WIFI_PASSWORD";
+// Secrets.h is no longer needed for this project.
+// WiFi credentials are now provisioned via CAN bus (ID 0x01) and stored in NVS.
+// This file can be safely deleted.
